Lots of updates
* Created the add_light playbook to add new lights
* Added a .gitignore and removed the hue.log generated by python-hue
* Created more playbooks for the python-hue module

--- a/hue-module/on_off.yml
+++ b/hue-module/on_off.yml
@@ -3,6 +3,6 @@
   tasks:
   - hue:
       station: 192.168.0.200
-      name: "{{my_light|default('all')}}"
-      !!str on: true
+      name: "{{light|default('all')}}"
+      !!str on: "{{on_off|default(True)}}"
       brightness: 254
