--- a/playbooks/on_off.yml
+++ b/playbooks/on_off.yml
@@ -4,7 +4,6 @@
     on_state:
       "on": true
       "bri": 254
-      "xy": [0.3227, 0.329]
     off_state:
       "on": false
   tasks:
@@ -12,19 +11,13 @@
       url: "http://192.168.0.200/api/12345-luggage/lights/{{item}}/state"
       method: PUT
       body: ' {{on_state|to_json}}'
-    with_items:
-    - 1
-    - 2
-    - 3
+    with_sequence: start=1 end=8
     when: state is defined and state == 'on'
 
   - uri:
       url: "http://192.168.0.200/api/12345-luggage/lights/{{item}}/state"
       method: PUT
       body: ' {{off_state|to_json}}'
-    with_items:
-    - 1
-    - 2
-    - 3
+    with_sequence: start=1 end=8
     when: state is defined and state == 'off'
 
