--- a/lights_paris.yml
+++ b/lights_paris.yml
@@ -1,10 +1,12 @@
 serial_numbers:
-- "6A0F05"
-- "F0C45C"
-- "11E153"
-- "7F8777"
 - "BE96F5"
-- "7AEA32"
-- "C80ED8"
-- "269360"
+- "6A0F05"
+- "0A1C5B"
+- "F0C45C"
 - "815E42"
+- "C80ED8"
+
+#- "7F8777" EXTRA
+#- "7AEA32" MIA?
+#- "269360" MIA?
+#- "11E153" DEAD BROKEN
