--- a/module-custom-api/on_off.yml
+++ b/module-custom-api/on_off.yml
@@ -3,7 +3,7 @@
   tasks:
   - hue:
       bridge: 192.168.254.100
-      name: Home
+      name: all
       !!str on: "{{state}}"
       brightness: 180
       rgb: "#eea657"
